--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,11 +406,24 @@ body {
 }
 
 .area-gallery img {
-    width: 280px;
-    height: 280px;
-    margin: 20px 30px;
+    width: calc(33.33% - 40px);
+    height: auto;
+    margin: 20px;
     transition: 0.5s ease-in-out;
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    .area-gallery img {
+      width: calc(50% - 40px);
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .area-gallery img {
+      width: 100%;
+      margin: 20px 0;
+    }
 }
 
 .area-gallery img:hover {
